@@ -2,12 +2,19 @@
 <beans>
 
 	<bean id="manager" class="edu.mcw.rgd.dataload.ontologies.Manager">
-        <property name="version" value="--ONTOLOGY LOAD pipeline -- ver. 1.5.54 -- May 1, 2019 --" />
+        <property name="version" value="--ONTOLOGY LOAD pipeline -- ver. 1.5.55 -- May 17, 2019 --" />
         <property name="oboFiles"><!--key: default ontology ID; value: path to data file -->
             <map><!-- NOTE: if ontology is found at http://www.obofoundry.org/, its url will start
                    ...      https://raw.githubusercontent.com/...
                    -->
+
+                <!-- DOC URL: http://geneontology.org/docs/download-ontology/
+                     points to a monthly stable release of go.obo
                 <entry key="GO" value="http://purl.obolibrary.org/obo/go/go-basic.obo"/>
+                -->
+                <!-- daily snapshot release of go.obo, go-basic.obo -->
+                <entry key="GO" value="http://purl.obolibrary.org/obo/go/snapshot/go-basic.obo"/>
+
                 <entry key="MP" value="http://ontologies.berkeleybop.org/mp.obo"/>
                 <!--<entry key="PW" value="ftp://ftp.rgd.mcw.edu/pub/ontology/pathway/pathway.obo"/>
                 <entry key="CMO" value="ftp://ftp.rgd.mcw.edu/pub/ontology/clinical_measurement/clinical_measurement.obo"/>
